fix crash at the end of user creation as there are no microposts

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
 </p>
 <p>
   <strong>First Micropost:</strong>
-  <%= @user.microposts.first.content%>
+  <%= @user.microposts.empty? ? "NOTHING FOUND! GO CREATE ONE" : @user.microposts.first.content%>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
